# Vrdndi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  artifacts.dvc  data.dvc  pyproject.toml  secrets.dvc
.dvc/: config
docs/: CONFIGURATION.md  USAGE.md
scripts/: data_labelling.py  data_saving.py  datalabel_streamlit.py  debug.py  demo.py  run.py  save_yt_data.py  scheduler.py  train.py  visualise_model.py
src/: config.py  path.py
src/db/: database.py
src/inference/: baseline.py  productive.py
src/model_dataset/: loader.py  productive.py  recursive_bge_m3.py
src/models/: activity_watcher_encoder.py  activitywatch_encoder.py  components.py  productive.py  recursive_bge_m3.py
src/pipelines/: baseline.py  productive.py  recursive_bge_m3.py
src/utils/: data_etl.py  ops.py
src/web/: website_frontend.py
test/: conftest.py  test_data_etl.py  test_inference_productive.py  test_model_dataset_productive.py  test_models_productive.py  test_ops.py  test_predict_productive_model.py  test_predict_sentence_transformer.py  test_productive_model.py  test_productive_pred_dataset.py  test_train_utils.py
test/fixture/: aw_app_sequence_test.csv  encode_aw_events_function_fixture.pt  like_dislike_tag_data_tag's_interest=1.csv
